--- a/Bitacora/s8012018.md
+++ b/Bitacora/s8012018.md
@@ -9,11 +9,11 @@
 	- [ ] Salir
 	- [ ] Editar usuario
 		- [ ] Grabar Usuario
-	- [ ] Agregar Dominio
+	- [ ] **Agregar Dominio**
 		- [ ] Crear Dominio
 	- [ ] Editar Dominio
 	- [ ] Avisos
-	- [x] Carro
+	- [x] **Carro**
 		- [x] Carro vacio
 		- **Contenido**
 			- [x] Por dominio
@@ -27,6 +27,7 @@
 			- [x] Medios de Pago [CLP,USD]
 				- [x] Seleccionar medio de pago
 			- [x] Compra [CLP,USD]
+				- [x] Verificar redirección
 
 ## Observaciones y comentarios
 - Actualización de README
@@ -108,6 +109,18 @@
 				CLP $18.900
 			</p>
 		</div>
+	</div>
+</div>
+```
+- VerCarro: Redireccion a sitio de compra en el div contenedor de class _medio_pago_info_ dentro de cada botonera :exclamation:
+```html
+<div class="medio_pago_info_boton">
+  	<form id="command" action="/registrar/caja/WEBPAY/pagoOnline.do" method="post">
+	    <input type="submit" class="submitButton" style="height: 45px;" value="Ir a Webpay">
+	  	<input type="hidden" name="CSRFP" value="A9EB6D2BB72C9BBC6DAF5E32EED5A319">
+	</form>
+	<div class="carro_compras_valor_total">
+	    Total CLP $ 18.900
 	</div>
 </div>
 ```
