--- a/Bitacora/s8012018.md
+++ b/Bitacora/s8012018.md
@@ -10,6 +10,13 @@
 	- [ ] Editar usuario
 		- [ ] Grabar Usuario
 	- [ ] **Agregar Dominio**
+		- [x] Nombre dominio
+			- [x] no disponible
+			- [x] disponible
+		- [ ] Datos del titular
+		- [ ] informacion de contactos
+		- [ ] Facturacion
+		- [ ] servidores DNS
 		- [ ] Crear Dominio
 	- [ ] Editar Dominio
 	- [ ] Avisos
